# polypomo

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  kill_poly.sh  overlay.nix  polypomo  result
.github/workflows/: build.yml
src/: cli.rs  client.rs  main.rs  server.rs
