[package]
name = "polypomo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
interprocess = "1.2.1"
tokio = { version = "1", features = ["full"] }