[package]
name = "polydoro"
description = "A simple pomodoro timer for polybar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.28"
interprocess = { version = "1.2.1", features = ["tokio_support"] }
log = "0.4.17"
pausable_clock = "1.0.1"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "sync", "fs"] }
tokio-graceful-shutdown = "0.12.1"
